--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PresentacionActivity"></activity>
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/tab_color_selector" />
+
+        <activity android:name=".PresentacionActivity" />
         <activity android:name=".CrearAventuraActivity" />
         <activity android:name=".JugarActivity" />
         <activity
