--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
 
         <service android:name=".Utilidades.NotificationsService"
             android:permission="android.permission.BIND_JOB_SERVICE"
+            android:enabled="true"
             android:exported="true"/>
 
         <receiver android:name=".Utilidades.AlarmReceiver"
