--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.vivetuaventura"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 4
-        versionName "4.0"
+        versionCode 7
+        versionName "7.0 Princess"
         multiDexEnabled true
 
 
